prevent layout shifting

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -11,6 +11,7 @@ body {
   @include mixins.mq(tablet) {
     font-size: 16px;
   }
+  width: 100vw;
 }
 
 img {
